# homework

./: .gitignore  .gitmodules  LICENSE.md  README.md  p1.pas  p3.pas  p4.pas  p5.pas  p6.pas  p7.pas
battery-stats/: Cargo.toml  README.md
chacha20/: CMakeLists.txt  README.md
chacha20/cmd/: CMakeLists.txt
chacha20/include/: poly1305.h
chacha20/src/chacha20/: chacha20_decrypt_files.c  chacha20_encrypt_bytes.c  chacha20_free.c  chacha20_gen_nonce.c  chacha20_impl.h  chacha20_next.c  chacha20_quarter_round.c
chacha20/tests/: chacha20-cipher-operation-test.c  chacha20-gen-key-test.c
dumb-crypto/: CMakeLists.txt  README.md
dumb-crypto/cmd/: CMakeLists.txt  affine-caesar.c  caesar-keyword.c  caesar.c  encryption-table-double-permutation.c  encryption-table-single-permutation.c  encryption-table.c  magic-square.c  playfair.c  polybius-square-v2.c  polybius-square.c  proportional-permutation.c  trithemius.c  vigenere.c  wheatstone-two-square.c
dumb-crypto/crypto/: CMakeLists.txt  affine_caesar.c  caesar.c  caesar_keyword.c  crypto.h  encryption_table.c  encryption_table_double_permutation.c  encryption_table_single_permutation.c  magic_square.c  playfair.c  polybius-square-v2.c  polybius_square.c  proportional-permutation.c  trithemius.c  vigenere.c  wheatstone_two_square.c
dumb-crypto/gui/: CMakeLists.txt  affine-caesar-gui.cpp  caesar-gui.cpp  caesar-keyword-gui.cpp  encryption-table-double-permutation-gui.cpp  encryption-table-gui.cpp  encryption-table-single-permutation-gui.cpp  magic-square-gui.cpp  playfair-gui.cpp  proportional-permutation-gui.cpp  trithemius-gui.cpp  vigenere-gui.cpp  wheatstone-two-square-gui.cpp
dumb-crypto/string/: CMakeLists.txt  str.h  str_new.c  str_push_back.c  str_push_unicode_character_back.c  str_to_c.c
dumb-crypto/tests/: CMakeLists.txt  affine-caesar-cipher-test.c  caesar-cipher-test.c  caesar-keyword-cipher-test.c  encryption-table-cipher-test.c  encryption-table-double-permutation-cipher-test.c  encryption-table-single-permutation-cipher-test.c  magic-square-cipher-test.c  playfair-cipher-test.c  polybius-square-cipher-test.c  polybius-square-v2-cipher-test.c  proportional-permutation-cipher-test.c  string-test.c  trithemius-cipher-test.c  unicode-len-test.c  vigenere-cipher-test.c  wheatstone-two-square-cipher-test.c
dumb-crypto/unicode/: CMakeLists.txt  unicode.c  unicode.h
ecc-exists/: CMakeLists.txt  README.md  ecc-exists.c  ecc-exists.h  gilbert_bound.c  gilbert_varshamov_bound.c  hamming_bound.c  singleton_bound.c  util.c
error-correction-codes/ecc/: CMakeLists.txt
error-correction-codes/ecc/hamming84/: doc.md  hamming_encode.c  hamming_impl.c
error-correction-codes/ecc/interleaver/: doc.md  interleaver.h  interleaver_free.c  interleaver_impl.h
error-correction-codes/ecc/repetition31/: doc.md
inaccurate-pi/: .gitignore  CMakeLists.txt  README.md  inaccurate-pi.c  needle.c  needle.h
needham-schroeder/: CMakeLists.txt  README.md  demo.sh
needham-schroeder/chacha20/: .gitignore
needham-schroeder/chacha20/cmd/: cc20.c
needham-schroeder/chacha20/dependencies/: CMakeLists.txt
needham-schroeder/chacha20/include/: chacha20.h
needham-schroeder/chacha20/src/: CMakeLists.txt
needham-schroeder/chacha20/tests/: CMakeLists.txt  chacha20-gen-nonce-test.c
needham-schroeder/cipher_suites/: CMakeLists.txt  chacha.c  ciphers.h  xorshift.c
needham-schroeder/clientA/: CMakeLists.txt  main.c
needham-schroeder/clientB/: CMakeLists.txt  main.c
needham-schroeder/mq_setup/: CMakeLists.txt  mq_setup.c  mq_setup.h
needham-schroeder/server/: CMakeLists.txt  gen-schema-header.c  listen.c  main.c  schema.sql  server.c  server.h
optimal-hamming-code/: CMakeLists.txt  README.md  optimal-hamming-code.c
optimal-hamming-code/hamming/: CMakeLists.txt  hamming.h  hamming_G.c  hamming_H.c  hamming_n.c
optimal-hamming-code/matrix/: CMakeLists.txt  matrix.h  matrix_clone.c  matrix_fill_random.c  matrix_free.c  matrix_multiply.c  matrix_new.c  matrix_swap_columns.c  matrix_swap_rows.c  matrix_to_string.c  matrix_to_systematic.c  matrix_transpose.c
optimal-hamming-code/tests/: CMakeLists.txt  ohc-hamming-G-test.c  ohc-hamming-H-test.c  ohc-hamming-encoding-test.c  ohc-hamming-n-test.c  ohc-matrix-clone-test.c  ohc-matrix-multiplication-test.c  ohc-matrix-swap-columns-rows.c  ohc-matrix-to-string-test.c  ohc-matrix-to-systematic-test.c  ohc-matrix-transpose.c
semester 6/information-theory/error-correction-codes/: CMakeLists.txt  README.md  ecc-hamming.c  ecc-repetition.c  error-count.c  main.c  noise-demo.c  noisify.c  random-gen.c  serial-wrap.c
semester 6/operating-systems/: CMakeLists.txt  config.h.in  crc.c  reader.c  threads.c  util.h  writer.c  writer.h
semester 6/operating-systems/bash-gimmicks/: backup-itself.sh  count.sh  echo.sh  ls.sh  man.sh  random.sh  semaphore.sh
semester 6/operating-systems/ipc/: CMakeLists.txt  ipc.c  receiver.c  sender.c
semester 6/operating-systems/ipc-pipes/: receiver.h  sender.h
semester 6/operating-systems/ipc-pipes-v2/: CMakeLists.txt  client.c  server.c
semester 6/operating-systems/ipc-queues/: CMakeLists.txt  ipc-queues.c
semester 6/operating-systems/ipc-queues-v2/: CMakeLists.txt  client.c  help.c  help.h  msg.h  server.c
semester 6/operating-systems/threads/: crc.h  reader.c  reader.h  (+3 more)
semester 6/programming-methods/: CMakeLists.txt  config.h.in  disease.cpp  disease.hpp  doctor.cpp  doctor.hpp  hospital.cpp  hospital.hpp  human.cpp  human.hpp  main.cpp  patient.cpp  patient.hpp  wallet.hpp
uni-books/: CMakeLists.txt  README.md
uni-books/database-wrapper/: CMakeLists.txt  database-wrapper.h  database_add_book.c  database_check_credentials.c  database_close.c  database_delete_book.c  database_delete_user.c  database_get_books.c  database_get_users.c  database_new.c  database_open.c  database_register.c  database_restore_book.c
uni-books/gui/: CMakeLists.txt  admin-panel.cpp  login-widget.cpp  main-window.cpp  main.cpp  uni-books.hpp  user-panel.cpp
uni-books/tests/: CMakeLists.txt  ub-get-user-test.c  ub-password-hash-test.c  ub-validate-username-test.c
(+446 files in other folders)
