[package]
name = "battery-stats"
version = "0.1.0"
authors = ["Murad <muradkarammaev@gmail.com>"]
edition = "2018"
default-run = "read-stats"

[[bin]]
name = "read-stats"
path = "src/read-stats/bin/main.rs"

[[bin]]
name = "process-stats"
path = "src/process-stats/bin/main.rs"

[dependencies]
csv = "1.1"
getopts = "0.2"
plotters = "0.2.15"
itertools = "0.9"
