cmake_minimum_required(VERSION 3.1)
project(DumbCrypto)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
if (NOT MSVC)
    add_compile_options(-Wall -Wextra -Wpedantic)
endif()
if (NOT WIN32)
    link_libraries(m)
endif()

add_subdirectory(qc)

add_subdirectory(unicode)
add_subdirectory(string)
add_subdirectory(crypto)

option(DC_TESTS "Build tests" OFF)
if(DC_TESTS)
    enable_testing()
    add_subdirectory(tests)
endif()

option(DC_CMD "Build CLI tools" OFF)
if(DC_CMD)
    add_subdirectory(cmd)
endif()

option(DC_GUI "Build GUI, requires FLTK and C++ compiler" OFF)
if(DC_GUI)
    find_package(FLTK CONFIG REQUIRED)
    add_subdirectory(gui)
endif()
