link_libraries(Crypto qc)

add_executable(caesar caesar.c)
add_executable(affine-caesar affine-caesar.c)
add_executable(encryption-table encryption-table.c)
add_executable(magic-square magic-square.c)
add_executable(trithemius trithemius.c)
add_executable(caesar-keyword caesar-keyword.c)
add_executable(playfair playfair.c)
add_executable(vigenere vigenere.c)
add_executable(encryption-table-single-permutation encryption-table-single-permutation.c)
add_executable(encryption-table-double-permutation encryption-table-double-permutation.c)
add_executable(wheatstone-two-square wheatstone-two-square.c)
add_executable(polybius-square polybius-square.c)
add_executable(polybius-square-v2 polybius-square-v2.c)
add_executable(proportional-permutation proportional-permutation.c)
