link_libraries(Crypto fltk)

add_executable(affine-caesar-gui affine-caesar-gui.cpp)
add_executable(caesar-gui caesar-gui.cpp)
add_executable(caesar-keyword-gui caesar-keyword-gui.cpp)
add_executable(encryption-table-gui encryption-table-gui.cpp)
add_executable(encryption-table-single-permutation-gui encryption-table-single-permutation-gui.cpp)
add_executable(encryption-table-double-permutation-gui encryption-table-double-permutation-gui.cpp)
add_executable(vigenere-gui vigenere-gui.cpp)
add_executable(wheatstone-two-square-gui wheatstone-two-square-gui.cpp)
add_executable(playfair-gui playfair-gui.cpp)
add_executable(trithemius-gui trithemius-gui.cpp)
add_executable(magic-square-gui magic-square-gui.cpp)
add_executable(proportional-permutation-gui proportional-permutation-gui.cpp)
