cmake_minimum_required(VERSION 3.10)
project(ErrorCorrectionCodes)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
if (MSVC)
	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
else()
	add_compile_options(-Wall -Wextra -Wno-unused-function)
endif()

include_directories(util)
add_subdirectory(noise-simulator)
add_subdirectory(random-generator)
add_subdirectory(bytes-to-string)
add_subdirectory(bit-array)
add_subdirectory(cmdopts)
add_subdirectory(serial-emulator)

add_executable(noisify noisify.c)
target_link_libraries(noisify PUBLIC CmdOpts NoiseSimulator)

add_subdirectory(tests)
enable_testing()
add_test(NAME NoiseTestRuns COMMAND tests/noise-test)
add_test(NAME BitTestRuns COMMAND tests/bit-test)
add_test(NAME CmdoptsTestRuns COMMAND tests/cmdopts-test)
add_test(NAME BytesToStringTestRuns COMMAND tests/bytes-to-string-test)
add_test(NAME RandomGeneratorTestRuns COMMAND tests/random-generator-test)
add_test(NAME SerialTestRuns COMMAND tests/serial-test)
