cmake_minimum_required(VERSION 3.1)
project(ErrorCorrectionCodes)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)
if (MSVC)
	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
else()
	add_compile_options(-Wall -Wextra)
endif()
if (NOT WIN32)
	link_libraries(m)
endif()

add_subdirectory(util)
link_libraries(Util)
add_subdirectory(noise-simulator)
add_subdirectory(random-generator)
add_subdirectory(bytes-to-string)
add_subdirectory(bit-array)
add_subdirectory(cmdopts)
add_subdirectory(serial-emulator)
add_subdirectory(ecc)

add_executable(random-gen random-gen.c)
target_link_libraries(random-gen CmdOpts RandomGenerator)

add_executable(noisify noisify.c)
target_link_libraries(noisify PUBLIC CmdOpts NoiseSimulator)

add_executable(serial-wrap serial-wrap.c)
target_link_libraries(serial-wrap PUBLIC CmdOpts BitArray SerialEmulator)

add_executable(ecc-repetition ecc-repetition.c)
target_link_libraries(ecc-repetition PUBLIC CmdOpts BitArray RepetitionCode)

add_executable(ecc-hamming ecc-hamming.c)
target_link_libraries(ecc-hamming PUBLIC CmdOpts BitArray HammingCode)

add_executable(ecc-interleaver ecc-interleaver.c)
target_link_libraries(ecc-interleaver PUBLIC CmdOpts BitArray Interleaver)

add_executable(error-count error-count.c)
target_link_libraries(error-count PUBLIC CmdOpts BitArray)

add_subdirectory(tests)
enable_testing()
add_test(NAME RandomGeneratorTestRuns COMMAND tests/random-generator-test)
add_test(NAME NoiseTestRuns COMMAND tests/noise-test)
add_test(NAME BitTestRuns COMMAND tests/bit-test)
add_test(NAME CmdoptsTestRuns COMMAND tests/cmdopts-test)
add_test(NAME BytesToStringTestRuns COMMAND tests/bytes-to-string-test)
add_test(NAME SerialTestRuns COMMAND tests/serial-test)
add_test(NAME EccRepetitionTestRuns COMMAND tests/ecc-repetition-test)
add_test(NAME EccHammingTestRuns COMMAND tests/ecc-hamming-test)
add_test(NAME EccInterleaverTestRuns COMMAND tests/ecc-interleaver-test)
